--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">TipCalc</string>
-    <string name="text_field">Amount</string>
+    <string name="tip_text">Amount</string>
     <string name="tip_button">Tip</string>
 </resources>
