--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">TipCalc</string>
     <string name="tip_text">Amount</string>
     <string name="tip_button">Tip</string>
+    <string-array name="tip_spinner">
+        <item>10%</item>
+        <item>15%</item>
+        <item>18%</item>
+        <item>20%</item>
+    </string-array>
 </resources>
